--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="theme-color" content="#317EFB">
   <link rel="shortcut icon" href="icons/icon-192x192.png" type="image/x-icon">
-
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="assets/css/styles.css">
 
@@ -15,20 +16,30 @@
 </head>
 
 <body>
-  <div class="wrapper">
+  <div class="container-flex bg-success py-5">
     <div class="total">
-      <div class="total">Your total is: $<span id="total">0</span></div>
+      <div class="total">
+        <h1 class="text-light text-center">Your Balance Is: $<span id="total">0</span></h1>
+      </div>
     </div>
-
+  </div>
+  <div class="wrapper px-2">
     <div class="form">
-      <input type="text" id="t-name" placeholder="Name of transaction" />
-      <input type="number" min="0" id="t-amount" placeholder="Transaction amount" />
-      <button id="add-btn"><i class="fa fa-plus buttons"></i> Add Funds</button>
-      <button id="sub-btn"><i class="fa fa-minus"></i> Subtract Funds</button>
+      <input type="text" id="t-name" class="form-control my-2" placeholder="Name of transaction" />
+      <input type="number" min="0" class="form-control my-2" id="t-amount" placeholder="Transaction amount" />
+      <div class="row">
+        <div class="col-md-6 my-1">
+          <button id="add-btn" class="btn btn-primary px-1 btn-width"><i class="fa fa-plus buttons"></i> Add
+            Funds</button>
+        </div>
+        <div class="col-md-6 my-1">
+          <button id="sub-btn" class="btn btn-danger px-1 btn-width"><i class="fa fa-minus"></i> Subtract Funds</button>
+        </div>
+      </div>
       <p class="error"></p>
     </div>
 
-    <div class="transactions">
+    <div class="my-4 transactions">
       <table>
         <thead>
           <th>Transaction</th>
@@ -40,7 +51,7 @@
       </table>
     </div>
 
-    <canvas id="myChart"></canvas>
+    <canvas id="myChart" class="my-5"></canvas>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
