--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="assets/css/styles.css">
-
+  <link rel="manifest" href="manifest.webmanifest">
   <title>Budget Tracker</title>
 </head>
 
